[package]
name = "longest-common-subsequence-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
wasm-bindgen = "0.2"
wasm-react = "0.6.0"
